# bencode_stream

./: .gitignore  README.rst  pyproject.toml
bencode_stream/: stream.py  util.py
